Making things more DRY and added min-width to diff-controls to prevent squashing in some situations

--- a/src/scss/drupal-diff.scss
+++ b/src/scss/drupal-diff.scss
@@ -5,49 +5,23 @@
 @import 'init';
 
 @include breakpoint($tab) {
-  .layout--main {
-    .diff-header {
-      grid-row: 1;
-      grid-column: 1;
-    }
 
-    .diff-controls {
-      grid-row: 1;
-      grid-column: 2;
-    }
-
-    .diff-responsive-table-wrapper {
-      grid-row: 2;
-      grid-column: 1/2;
-    }
+  .diff-header {
+    grid-row: 1;
+    grid-column: 1;
   }
 
-  .layout--main-n-side,
-  .layout--side-n-main {
+  .diff-controls {
+    grid-row: 1;
+    grid-column: 2;
+    min-width: 292px;
+  }
 
-    .diff-header {
-      grid-row: 1;
-      grid-column: 1;
-    }
-
-    .diff-controls {
-      grid-row: 1;
-      grid-column: 2;
-    }
+  .layout--main {
 
     .diff-responsive-table-wrapper {
       grid-row: 2;
-      grid-column: 1;
-    }
-
-    .diff-responsive-table-wrapper + .ga-aside {
-      grid-row: 2;
-      grid-column: 2;
-    }
-
-    .ga-aside + .diff-responsive-table-wrapper {
-      grid-row: 2;
-      grid-column: 1;
+      grid-column: 1/3;
     }
   }
 
@@ -58,7 +32,7 @@
       grid-column: 1;
     }
 
-    .diff-responsive-table-wrapper + .ga-aside {
+    .ga-aside {
       grid-row: 2;
       grid-column: 2;
     }
@@ -66,19 +40,14 @@
 
   .layout--side-n-main {
 
+    .ga-aside {
+      grid-row: 2;
+      grid-column: 1;
+    }
+
     .diff-responsive-table-wrapper {
       grid-row: 2;
       grid-column: 2;
-    }
-
-    .diff-responsive-table-wrapper + .ga-aside {
-      grid-row: 2;
-      grid-column: 2;
-    }
-
-    .ga-aside + .diff-responsive-table-wrapper {
-      grid-row: 2;
-      grid-column: 1;
     }
   }
 }
